[gd_scene load_steps=15 format=3 uid="uid://qmf6bb0fmdoh"]

[ext_resource type="PackedScene" uid="uid://p4kpmiw0sm7s" path="res://ui/menu/main_menu.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://cdnxppinoliq3" path="res://ui/ui_timer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://d02ebemt4v5qs" path="res://ui/sprite_label.tscn" id="3"]
[ext_resource type="Script" path="res://ui/debug/input_display.gd" id="4"]
[ext_resource type="Script" path="res://ui/hud.gd" id="5"]
[ext_resource type="FontFile" uid="uid://g5vpaou6j0x8" path="res://assets/fonts/Sk-Modernist-Mono.otf" id="6_mt0yw"]
[ext_resource type="Script" path="res://ui/debug/pause_display.gd" id="7"]
[ext_resource type="Script" path="res://ui/debug/speed_display.gd" id="8"]
[ext_resource type="Script" path="res://ui/enemy_indicator.gd" id="10"]

[sub_resource type="CanvasItemMaterial" id="2"]

[sub_resource type="LabelSettings" id="LabelSettings_fdqft"]
line_spacing = 2.0
font = ExtResource("6_mt0yw")
font_size = 24
outline_size = 2
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(0, 2)

[sub_resource type="CanvasItemMaterial" id="4"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="5"]
blend_mode = 1

[sub_resource type="Theme" id="3"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("5")

[node name="fade" type="ColorRect" parent="."]
offset_left = -2.0
offset_right = 1918.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="white_fade" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(1, 1, 1, 0)

[node name="area_title" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 240.0
offset_top = 620.0
offset_right = 506.0
offset_bottom = 642.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="label" type="Label" parent="area_title"]
offset_left = 76.0
offset_right = 190.0
offset_bottom = 26.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "unnamed area"

[node name="letterbox1" type="Polygon2D" parent="."]
position = Vector2(-2, 0)
z_index = -1
color = Color(0, 0, 0, 0)
polygon = PackedVector2Array(0, 3.30607e-05, 1920, 0, 1920, 128, 1177.52, 128, 0, 128)

[node name="letterbox2" type="Polygon2D" parent="."]
position = Vector2(-2, 952)
z_index = -1
color = Color(0, 0, 0, 0)
polygon = PackedVector2Array(0, 3.30607e-05, 1920, 0, 1920, 128, 0, 128)

[node name="main_menu" parent="." instance=ExtResource("1")]

[node name="control" type="Node2D" parent="."]

[node name="death_display" parent="control" instance=ExtResource("3")]

[node name="enemy_indicator" type="Node2D" parent="control"]
position = Vector2(544, 48)
z_index = 10
script = ExtResource("10")

[node name="enemy_indicator_bg" type="Polygon2D" parent="control"]
visible = false
position = Vector2(0, 984)
z_index = -1
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(944, 16, 1920, 16, 1920, 96, 896, 96)

[node name="enemy_display" type="Label" parent="control"]
visible = false
material = SubResource("2")
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.03
anchor_right = 0.803
anchor_bottom = 0.15
offset_left = 98.0002
offset_top = 552.4
offset_right = 66.1603
offset_bottom = 480.0
scale = Vector2(2.5, 2.5)
text = "enemies: 0"

[node name="best" type="Label" parent="control"]
visible = false
modulate = Color(1, 1, 1, 0.823529)
material = SubResource("2")
anchors_preset = -1
anchor_left = 0.395
anchor_top = 0.07
anchor_right = 0.455
anchor_bottom = 0.07
offset_left = 308.4
offset_top = 59.6
offset_right = 374.4
offset_bottom = 96.6
scale = Vector2(3, 3)
size_flags_horizontal = 3
size_flags_vertical = 6
text = "000"

[node name="best_diff" type="Label" parent="control"]
visible = false
modulate = Color(1, 1, 1, 0.823529)
material = SubResource("2")
anchors_preset = -1
anchor_left = 0.395
anchor_top = 0.07
anchor_right = 0.455
anchor_bottom = 0.07
offset_left = 120.0
offset_top = 200.0
offset_right = 186.0
offset_bottom = 237.0
scale = Vector2(3, 3)
size_flags_horizontal = 3
size_flags_vertical = 6
text = "000"
uppercase = true

[node name="ui_timer" parent="control" instance=ExtResource("2")]

[node name="debug" type="CanvasLayer" parent="."]
layer = 2

[node name="Coin1" type="ColorRect" parent="debug"]
visible = false
offset_left = 13.0
offset_top = 160.0
offset_right = 21.0
offset_bottom = 168.0
color = Color(0.141176, 0.921569, 0.666667, 1)

[node name="Coin2" type="ColorRect" parent="debug"]
visible = false
offset_left = 23.0
offset_top = 160.0
offset_right = 31.0
offset_bottom = 168.0
color = Color(0.854902, 0.439216, 0.913725, 1)

[node name="Coin3" type="ColorRect" parent="debug"]
visible = false
offset_left = 33.0
offset_top = 160.0
offset_right = 41.0
offset_bottom = 168.0
color = Color(0.890196, 0.878431, 0.172549, 1)

[node name="info" type="Label" parent="debug"]
visible = false
offset_left = 4.15908
offset_top = 5.42046
offset_right = 170.159
offset_bottom = 19.4205

[node name="controls" type="Label" parent="debug"]
visible = false
offset_left = 9.19875
offset_top = 181.809
offset_right = 175.199
offset_bottom = 246.809
text = "X: jump
square: attack
R1: dash
"

[node name="ray_u" type="Polygon2D" parent="debug"]
position = Vector2(808, 784)
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-1392, -416, -1424, -384, -1392, -352, -1360, -384)

[node name="ray_l" type="Polygon2D" parent="debug"]
position = Vector2(776, 832)
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-1392, -416, -1424, -384, -1392, -352, -1360, -384)

[node name="ray_d" type="Polygon2D" parent="debug"]
position = Vector2(808, 880)
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-1392, -416, -1424, -384, -1392, -352, -1360, -384)

[node name="ray_r" type="Polygon2D" parent="debug"]
position = Vector2(840, 832)
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-1392, -416, -1424, -384, -1392, -352, -1360, -384)

[node name="BL" type="Label" parent="debug"]
offset_left = 16.0
offset_top = 896.0
offset_right = 91.0
offset_bottom = 1028.0
text = " CAM:             BOUNDED BY:
ROOM:
 RPT:
TICK:
 FPS:"
label_settings = SubResource("LabelSettings_fdqft")

[node name="cam" type="Label" parent="debug/BL"]
modulate = Color(0.541176, 0.92549, 1, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -160.0
offset_right = 140.0
offset_bottom = -127.0
grow_vertical = 0
text = "(----,----)"
label_settings = SubResource("LabelSettings_fdqft")

[node name="cam_bounds" type="Label" parent="debug/BL"]
modulate = Color(0.541176, 0.92549, 1, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 448.0
offset_top = -160.0
offset_right = 508.0
offset_bottom = -127.0
grow_vertical = 0
text = "----"
label_settings = SubResource("LabelSettings_fdqft")

[node name="room" type="Label" parent="debug/BL"]
modulate = Color(0.541176, 0.92549, 1, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -128.0
offset_right = 140.0
offset_bottom = -95.0
grow_vertical = 0
text = "----"
label_settings = SubResource("LabelSettings_fdqft")

[node name="replay_tick" type="Label" parent="debug/BL"]
modulate = Color(1, 0.356863, 0.505882, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -96.0
offset_right = 140.0
offset_bottom = -63.0
grow_vertical = 0
text = "----"
label_settings = SubResource("LabelSettings_fdqft")

[node name="tick" type="Label" parent="debug/BL"]
modulate = Color(1, 0.788235, 0.588235, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -64.0
offset_right = 140.0
offset_bottom = -31.0
grow_vertical = 0
text = "----"
label_settings = SubResource("LabelSettings_fdqft")

[node name="fps" type="Label" parent="debug/BL"]
modulate = Color(0.462745, 0.807843, 0.419608, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -32.0
offset_right = 140.0
offset_bottom = 1.0
grow_vertical = 0
text = "----"
label_settings = SubResource("LabelSettings_fdqft")

[node name="version" parent="debug" instance=ExtResource("3")]
modulate = Color(1, 1, 1, 0.0784314)
material = SubResource("4")
position = Vector2(1520, 992)
text = "v0.4.0 alpha"

[node name="pingtext" parent="debug" instance=ExtResource("3")]
modulate = Color(1, 1, 1, 0)
material = SubResource("5")
position = Vector2(40, 192)

[node name="input_display" type="Node2D" parent="debug"]
position = Vector2(504, 144)
script = ExtResource("4")

[node name="stick" type="Node2D" parent="debug/input_display"]

[node name="dot_2" type="ColorRect" parent="debug/input_display/stick"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("3")
color = Color(1, 0.560784, 0, 1)

[node name="dot" type="ColorRect" parent="debug/input_display/stick"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("3")

[node name="panel" type="ColorRect" parent="debug/input_display/stick"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.0784314)

[node name="jump" type="ColorRect" parent="debug/input_display"]
offset_left = 36.0
offset_top = -4.0
offset_right = 68.0
offset_bottom = 28.0
color = Color(0.905882, 0.905882, 0.905882, 1)

[node name="attack" type="ColorRect" parent="debug/input_display"]
offset_left = 76.0
offset_top = -20.0
offset_right = 108.0
offset_bottom = 12.0
color = Color(0.309804, 0.694118, 0.286275, 1)

[node name="dash" type="ColorRect" parent="debug/input_display"]
offset_left = 76.0
offset_top = -44.0
offset_right = 108.0
offset_bottom = -28.0
color = Color(0.701961, 0.388235, 0.917647, 1)

[node name="reset" type="ColorRect" parent="debug/input_display"]
offset_left = 36.0
offset_top = -44.0
offset_right = 68.0
offset_bottom = -28.0
color = Color(0.917647, 0.388235, 0.486275, 1)

[node name="speed_display" type="Node2D" parent="debug"]
position = Vector2(40, 272)
script = ExtResource("8")

[node name="spritetext" parent="debug/speed_display" instance=ExtResource("3")]
modulate = Color(0.776471, 0.564706, 0, 1)
material = SubResource("4")
text = "1234"

[node name="pause_display" type="Node2D" parent="debug"]
position = Vector2(640, 112)
script = ExtResource("7")

[node name="spritetext" parent="debug/pause_display" instance=ExtResource("3")]
modulate = Color(0.490196, 0.0784314, 0.317647, 1)
material = SubResource("4")
text = "*PAUSED*"

[node name="pos_x" parent="debug" instance=ExtResource("3")]
modulate = Color(0.776471, 0.564706, 0, 1)
material = SubResource("4")
position = Vector2(40, 192)
text = "0000"

[node name="pos_y" parent="debug" instance=ExtResource("3")]
modulate = Color(0.776471, 0.564706, 0, 1)
material = SubResource("4")
position = Vector2(192, 192)
text = "0000"

[node name="vel_x" parent="debug" instance=ExtResource("3")]
modulate = Color(0.133333, 0.803922, 0.176471, 1)
material = SubResource("4")
position = Vector2(40, 232)
text = "0000"

[node name="vel_y" parent="debug" instance=ExtResource("3")]
modulate = Color(0.133333, 0.803922, 0.176471, 1)
material = SubResource("4")
position = Vector2(192, 232)
text = "0000"

[node name="grounded" parent="debug" instance=ExtResource("3")]
modulate = Color(0.803922, 0.698039, 0.133333, 1)
material = SubResource("4")
position = Vector2(40, 400)
text = "is grounded:"

[node name="state_display" type="Node2D" parent="debug"]
position = Vector2(1560, 152)

[node name="current_state" type="Label" parent="debug/state_display"]
offset_right = 40.0
offset_bottom = 14.0
text = "current state"
label_settings = SubResource("LabelSettings_fdqft")

[node name="past_states" type="Label" parent="debug/state_display"]
offset_left = 16.0
offset_top = 72.0
offset_right = 154.0
offset_bottom = 539.0
text = "state1
state2
state3
state4
state5
state6
state7
state8
state9"
label_settings = SubResource("LabelSettings_fdqft")
